# testgit

./: readme.txt
smart_home_app/: CMakeLists.txt  Makefile
smart_home_app/lib_src/aml_btctl/: CMakeLists.txt  Makefile  a2dp_ctl.c  a2dp_ctl.h  cmake_install.cmake  hfp_ctl.c  hfp_ctl.h  hfp_ctl_socket.c  hfp_ctl_socket.h
smart_home_app/lib_src/aml_core/: CMakeLists.txt  Makefile  cJSON.c  cJSON.h  cmake_install.cmake  common.c  common.h  gatgobal.h  gatlist.c  gatlist.h  gatplatform.h  gatplatformType.h  gattypes.h  iofipc.c  iofipc.h  iofpthread.c  iofpthread.h  iofstring.c  iofstring.h  ioftcp.c  ioftcp.h  ioftime.c  ioftime.h  log.h  phonebook.c  phonebook.h  semaph.c  semaph.h  tcp.c  tcp.h  timer_subsystem.c  timer_subsystem.h
smart_home_app/lib_src/aml_downloader/: CMakeLists.txt  Makefile  aml_downloader.c  aml_downloader.h  cmake_install.cmake  main.c-
smart_home_app/lib_src/aml_gstplayer/: CMakeLists.txt  Makefile  aml_gst_player_imp.c  aml_gst_player_imp.h  cmake_install.cmake
smart_home_app/lib_src/aml_playermanager/: CMakeLists.txt  aml_playermanager.cpp  aml_playermanager.h
smart_home_app/lib_src/aml_tts/: aml_tts_play.h
smart_home_app/lib_src/aml_update/: aml_update.c  aml_update.h
smart_home_app/lib_src/aml_utils/: CMakeLists.txt  Makefile  aml_log.h  autolock.h  base64.c  base64.h  cmake_install.cmake  md5.c  md5.h  util.c  util.h
smart_home_app/lib_src/aml_volume/: CMakeLists.txt  Makefile  aml_volume_control.h  cmake_install.cmake
smart_home_app/lib_src/key_event/: CMakeLists.txt  Makefile  cmake_install.cmake  key_event.c  key_event.h  key_event_process.c  key_event_process.h
smart_home_app/lib_src/ledring/: CMakeLists.txt  Makefile  cmake_install.cmake  ledring.c  ledring.h
smart_home_app/lib_src/network_cfg/: CMakeLists.txt  Makefile  cmake_install.cmake  network_cfg.c  network_cfg.h  wifi_setup_bt.sh
smart_home_app/lib_src/pcm_player_recorder/: CMakeLists.txt  Makefile  cmake_install.cmake  pcm_player.cpp  pcm_player.h  pcm_recorder.cpp  pcm_recorder.h
smart_home_app/pro/aml_migu_demo.si4project/: aml_migu_demo.SearchResults  aml_migu_demo.sip_sym  aml_migu_demo.sip_xab  aml_migu_demo.sip_xad  aml_migu_demo.sip_xc  aml_migu_demo.sip_xf  aml_migu_demo.sip_xm  aml_migu_demo.sip_xr  aml_migu_demo.sip_xsb  aml_migu_demo.sip_xsd  aml_migu_demo.siproj  aml_migu_demo.siwork
smart_home_app/resource/: ivw_resource.jet  musicInfo.json
smart_home_app/resource/sai_config/: sai_api.q  sai_config.txt  sai_mic.q  saires_sengled.q  saires_sengled2.q
smart_home_app/resource/sound/: ack0.pcm  ack1.pcm  ack10.pcm  (+26 more)
(+117 files in other folders)
